--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -1,9 +1,15 @@
 // Media Queries
-@mixin for-desktop-375-down {
+@mixin for-375-down {
     @media (max-width: 375px) { @content; }
 }
-@mixin for-desktop-375-up {
+@mixin for-375-up {
     @media (min-width: 376px) { @content; }
+}
+@mixin for-480-down {
+    @media (max-width: 479px) { @content; }
+}
+@mixin for-480-up {
+    @media (min-width: 480px) { @content; }
 }
 @mixin for-phone-only {
     @media (max-width: 599px) { @content; }
@@ -14,11 +20,23 @@
 @mixin for-tablet-portrait-up {
     @media (min-width: 600px) { @content; }
 }
+@mixin for-640-down {
+    @media (max-width: 639px) { @content; }
+}
+@mixin for-640-up {
+    @media (min-width: 640px) { @content; }
+}
 @mixin for-tablet-landscape-down {
     @media (max-width: 899px) { @content; }
 }
 @mixin for-tablet-landscape-up {
     @media (min-width: 900px) { @content; }
+}
+@mixin for-992-down {
+    @media (max-width: 991px) { @content; }
+}
+@mixin for-992-up {
+    @media (min-width: 992px) { @content; }
 }
 @mixin for-desktop-down {
     @media (max-width: 1199px) { @content; }
@@ -138,7 +156,7 @@
 }
 
 // Typography
-@mixin line-height( $line-height: 1.3em ) {
+@mixin line-height( $line-height: 1.3 ) {
     line-height: $line-height;
 }
 
