--- a/resources/views/website/assets/sass/_init.scss
+++ b/resources/views/website/assets/sass/_init.scss
@@ -1,7 +1,7 @@
 // Theme Settings
 // Navigation
 $nav-link-color: $white;
-$nav-link-hover-color: $purple;
+$nav-link-hover-color: $red-light;
 $nav-link-active-color: $nav-link-hover-color;
 $nav-sticky-link-color: $black;
 $nav-sticky-link-hover-color: $purple;
